# Proyecto-Hormiguero

./: .coverage  .dockerignore  .gitignore  .tool-versions  AJUSTES_REALIZADOS_TESTS.md  ALLURE_PRUEBAS_AUTOMATICAS.md  CAMBIOS_SISTEMA_LOTES_HORMIGAS.md  CLOUDFLARE_FIX.md  CLOUDFLARE_PYTHON_FIX.md  CLOUDFLARE_SETUP.md  COMANDOS_CMD.txt  COMANDOS_EJECUTAR_TESTS_COBERTURA.md  COMANDOS_RAPIDOS.txt  COMO_ACCEDER_CONTRATO_API.md  COMO_EJECUTAR.txt  COMO_EJECUTAR_SCRIPT.md  DEPLOY_CLOUDFLARE.md  DEPLOY_RAILWAY.md  DIAGNOSTICO_CLOUDFLARE.md  DOCKER_GUIDE.md  DOCUMENTACION_API_RECOLECCION.md  Dockerfile  Dockerfile.railway  EJECUTAR_SCRIPT_PRUEBAS.md  EJEMPLOS_JSON_PRUEBAS.md  EXTERNAL_ACCESS_GUIDE.md  FIXES_DEPLOYMENT.md  GUIA_COMANDOS_CMD.md  GUIA_COMANDOS_CMD_WINDOWS.md  GUIA_COMPLETA_PRUEBAS_API.md  GUIA_GIT.md  GUIA_INICIO_RAPIDO.md  GUIA_POSTMAN.md  HAPPY_PATH_API.md  INSTRUCCIONES_EJECUCION.md  INSTRUCCIONES_EJECUCION_PRUEBAS.md  INSTRUCCIONES_REINICIAR_SERVICIO.md  MEJORAS_TESTS_TDD_BDD.md  PLANTILLA_SOLICITUDES_API.md  POSTMAN_COLLECTION.json  (+94 more)
docs/: CONFIGURACION_RAILWAY.md  GUIA_PRUEBAS.md  INTEGRACION_ENTORNO.md
features/: api_recoleccion.feature  recoleccion.feature  recoleccion_simple.feature  simple_test.feature
functions/: _middleware.js
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_201f6be40610172c___init___py.html  z_201f6be40610172c_recoleccion_controller_py.html  z_366d2ab1b04c22bf_database_manager_py.html  z_49a3ad288e734c12___init___py.html  z_5b56f164171d2465___init___py.html  z_5b56f164171d2465_alimento_py.html  z_5b56f164171d2465_estado_hormiga_py.html  z_5b56f164171d2465_estado_tarea_py.html  z_5b56f164171d2465_hormiga_py.html  z_5b56f164171d2465_mensaje_py.html  z_5b56f164171d2465_tarea_recoleccion_py.html  z_5b56f164171d2465_tipo_mensaje_py.html  z_986ff0e25308f8f1___init___py.html  z_986ff0e25308f8f1_comunicacion_api_service_py.html  z_986ff0e25308f8f1_comunicacion_service_py.html  z_986ff0e25308f8f1_entorno_api_service_py.html  z_986ff0e25308f8f1_entorno_service_py.html  z_986ff0e25308f8f1_mock_comunicacion_service_py.html  z_986ff0e25308f8f1_mock_entorno_service_py.html  z_986ff0e25308f8f1_persistence_service_py.html  z_986ff0e25308f8f1_recoleccion_service_py.html  z_986ff0e25308f8f1_timer_service_py.html
scripts/: advanced_docker_test.py  analizar_pruebas_fallidas.py  api_examples.py  check_memory_data.py  (+87 more)
(+51 files in other folders)
